fixed alignment for done image

--- a/app/assets/stylesheets/registrationpage.css.scss
+++ b/app/assets/stylesheets/registrationpage.css.scss
@@ -14,8 +14,8 @@
 .done-image{
 	width: 20px;
 	height: 20px;
-	top: 156px;
-	left: 450px;
+	top: 151px;
+	left: 500px;
 	display: inline-block;
 	position: absolute;
 	display: none;
